--- a/.github/workflows/buildDevelop.yml
+++ b/.github/workflows/buildDevelop.yml
@@ -20,11 +20,11 @@ jobs:
     - uses: actions/checkout@main
     - name: Build Windows
       uses: ./.github/actions/build_win
-  buildOsx:
-    name: Build OSX
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@main
-    - name: Build OSX
-      uses: ./.github/actions/build_osx
+#  buildOsx:
+#    name: Build OSX
+#    runs-on: ubuntu-latest
+#    steps:
+#    - uses: actions/checkout@main
+#    - name: Build OSX
+#      uses: ./.github/actions/build_osx
 
