--- a/.github/workflows/buildRelease.yml
+++ b/.github/workflows/buildRelease.yml
@@ -25,19 +25,19 @@ jobs:
       uses: ./.github/actions/build_win
     - name: upload zip
       run: sh ./.github/actions/upload_zip/script.sh ${{ secrets.GITHUB_TOKEN }}
-  buildOsx:
-    name: Build OSX
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@main
-    - name: Build OSX
-      uses: ./.github/actions/build_osx
-    - name: upload zip
-      run: sh ./.github/actions/upload_zip/script.sh ${{ secrets.GITHUB_TOKEN }}
+#  buildOsx:
+#    name: Build OSX
+#    runs-on: ubuntu-latest
+#    steps:
+#    - uses: actions/checkout@main
+#    - name: Build OSX
+#      uses: ./.github/actions/build_osx
+#    - name: upload zip
+#      run: sh ./.github/actions/upload_zip/script.sh ${{ secrets.GITHUB_TOKEN }}
   combineDist:
     name: Combine Distributions
     runs-on: ubuntu-latest
-    needs: [buildLinux, buildWindows, buildOsx]
+    needs: [buildLinux, buildWindows]
     steps:
     - uses: actions/checkout@main
     - name: combine zip
