--- a/.github/workflows/buildDevelop.yml
+++ b/.github/workflows/buildDevelop.yml
@@ -4,7 +4,7 @@ on:
   push:
 name: Push
 env:
-  RACK_SDK_VERSION: 1.1.6
+  RACK_SDK_VERSION: 2.git.b04e4117
 jobs:
   buildLinux:
     name: Build Linux
