--- a/.github/workflows/buildRelease.yml
+++ b/.github/workflows/buildRelease.yml
@@ -5,7 +5,7 @@ on:
     types: [published]
 name: Release
 env:
-  RACK_SDK_VERSION: 1.1.6
+  RACK_SDK_VERSION: 2.git.b04e4117
 jobs:
   buildLinux:
     name: Build Linux
